# int3nts

./: .gitignore  README.md  env.testnet.example  flake.nix
.claude/: rules.md
.claude/commands/: check-ci.md  checkme.md  commit.md  create-pr.md  deadcode.md  docdebt.md  review-commit-tasks.md  review-me.md  review-tests-new.md  techdebt.md
.claude/scripts/: check-md-lint.py
.cursor/: plan.md  rules  test-summary.sh
.cursor/plans/: plan.md
.github/workflows/: e2e_tests.yml  unit-tests-reusable.yml  unit_tests.yml
.taskmaster/docs/: README.md  architecture-component-mapping.md  data-models.md  security-checklist.md
chain-clients/: extension-checklist.md
chain-clients/mvm/: Cargo.toml
chain-clients/scripts/: test.sh
coordinator/: .gitignore  Cargo.toml  README.md
coordinator/config/: coordinator.template.toml
coordinator/src/: lib.rs  main.rs  mvm_client.rs  svm_client.rs
coordinator/src/api/: generic.rs  inflow_generic.rs  mod.rs  negotiation.rs  outflow_generic.rs  outflow_svm.rs
coordinator/src/config/: mod.rs
coordinator/src/monitor/: generic.rs  hub_mvm.rs  inflow_generic.rs  mod.rs  outflow_evm.rs  outflow_generic.rs  outflow_mvm.rs  outflow_svm.rs
coordinator/tests/: api_tests.rs  auth_hardening_tests.rs  config_tests.rs  extension-checklist.md  helpers.rs  mod.rs  monitor_tests.rs  mvm_client_tests.rs  negotiation_validation_tests.rs  readiness_evm_tests.rs  readiness_mvm_tests.rs  readiness_svm_tests.rs  readiness_tests.rs  storage_tests.rs
docs/: README.md  checklist-guide.md  docs-guide.md  framework-extension-completeness-lists.md  framework-extension-guide.md  programmable-fulfillment.md  protocol.md
docs/architecture/: README.md  architecture-component-mapping.md  codestyle-testing.md  data-models.md  domain-boundaries-and-interfaces.md  gmp-sender-receiver-pattern.md  rates_and_fees.md  rpg-methodology.md  security-checklist.md
docs/coordinator/: README.md  api.md  guide.md
docs/frontend/: README.md
docs/intent-frameworks/: README.md  framework-extension-completeness-lists.md  framework-extension-guide.md
docs/move-intent-framework/: api-reference.md  development.md
docs/operations/: incident-response.md  key-rotation.md  relay-deauthorization.md  solver-revocation.md
docs/sdk/: README.md
docs/solver/: README.md
docs/svm-intent-framework/: README.md
docs/testing-infra/: README.md
docs/trusted-gmp/: README.md  api.md  guide.md
docs/trusted-verifier/: api.md  negotiation-routing.md
evm-intent-framework/scripts/: claim-escrow.js
evm-intent-framework/test/: cancel.test.js  cross-chain.test.js  deposit.test.js  edge-cases.test.js  error-conditions.test.js  initialization.test.js  integration.test.js
frontend/: README.md  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/src/: COMPLETENESS.md  extension-checklist.md
integrated-gmp/: .gitignore  Cargo.toml  README.md
integrated-gmp/config/: integrated-gmp.template.toml
integrated-gmp/src/: evm_client.rs  integrated_gmp_relay.rs  lib.rs  main.rs  mvm_client.rs  svm_client.rs
integrated-gmp/tests/: config_tests.rs  cross_chain_tests.rs  evm_client_tests.rs  evm_tests.rs  extension-checklist.md  helpers.rs  helpers_mock_server.rs  integrated_gmp_relay_tests.rs  monitor_tests.rs  mvm_client_tests.rs  mvm_tests.rs  svm_client_tests.rs  svm_relay_tests.rs  svm_tests.rs
intent-framework/: README.md
intent-framework/sources/: fa_intent.move  fa_intent_with_oracle.move  fungible_asset_intent.move  fungible_asset_intent_with_oracle.move  intent.move
intent-framework/tests/: fa_integration_tests.move  fa_tests.move  fungible_asset_integration_tests.move  fungible_asset_intent_with_oracle_tests.move  fungible_asset_test_utils.move  (+2 more)
intent-frameworks/: COMPLETENESS-CHECKLIST.md  COMPLETENESS.md  EXTENSION-CHECKLIST.md  extension-checklist.md
intent-frameworks/svm/programs/intent-gmp/: Cargo.toml
intent-frameworks/svm/programs/intent-gmp/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
intent-frameworks/svm/programs/intent-gmp/tests/: endpoint_tests.rs
intent-frameworks/svm/tools/intent_escrow_cli/: Cargo.toml
intent-frameworks/svm/tools/intent_escrow_cli/src/: lib.rs  main.rs
intent-frameworks/svm/tools/intent_escrow_cli/tests/: cli_tests.rs
move-intent-framework/: README.md
nix/: movement.nix
solver/: Cargo.toml
svm-intent-framework/: .gitignore  Anchor.toml  Cargo.toml  Dockerfile.test  README.md  package.json  tsconfig.json
svm-intent-framework/programs/intent_escrow/: Cargo.toml
svm-intent-framework/programs/intent_escrow/src/: entrypoint.rs  error.rs  lib.rs  processor.rs
svm-intent-framework/programs/intent_escrow/tests/: cancel.rs  claim.rs  common.rs  cross_chain.rs  deposit.rs  edge_cases.rs  error_conditions.rs  expiry.rs  initialization.rs  integration.rs
svm-intent-framework/scripts/: README.md  build.sh  cancel-escrow.sh  claim-escrow.sh  create-escrow.sh  get-escrow.sh  get-token-balance.sh  initialize.sh  test-docker.sh  test.sh
svm-intent-framework/tests/: cancel.test.ts  claim.test.ts  cross-chain.test.ts  deposit.test.ts  edge-cases.test.ts  error-conditions.test.ts  expiry.test.ts  initialization.test.ts  integration.test.ts  scripts.test.ts
svm-intent-framework/tests/helpers/: index.ts  setup.ts  token.ts
svm-intent-framework/tools/intent_escrow_cli/: Cargo.toml
svm-intent-framework/tools/intent_escrow_cli/src/: main.rs
testing-infra/: README.md  run-all-unit-tests.sh  test-summary.sh
trusted-gmp/: .gitignore  Cargo.toml  README.md
trusted-verifier/: README.md
verifier/: .gitignore  README.md
(+559 files in other folders)
