[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"
authors = ["Intent Framework Team"]
description = "Coordinator service for cross-chain intent monitoring and negotiation routing"

[lib]
name = "coordinator"
path = "src/lib.rs"

[[bin]]
name = "coordinator"
path = "src/main.rs"

[dependencies]
# Pin transitive dep: constant_time_eq >= 0.4.3 requires rustc >= 1.95,
# which is newer than the nix-pinned toolchain. Remove when nix rustc is bumped.
constant_time_eq = "=0.4.2"

# Async runtime (matching aptos-core version)
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcs = "0.1"
toml = "0.8"
hex = "0.4"
borsh = "0.10"

# Shared chain client libraries
chain-clients-common = { path = "../chain-clients/common" }
chain-clients-mvm = { path = "../chain-clients/mvm" }
chain-clients-svm = { path = "../chain-clients/svm" }

# HTTP client for cross-chain communication
reqwest = { version = "0.11", features = ["json"] }
url = "2.5"

# Web framework for API
warp = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.13"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Hashing
sha2 = "0.10"

# Correlation IDs
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
base64 = "0.21"
borsh = "0.10"
tokio-test = "0.4"
wiremock = "0.5"
rand = "0.8"
