[package]
name = "intent_escrow"
version = "0.1.0"
description = "Solana escrow for cross-chain intents with verifier signature verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "intent_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
