[package]
name = "intent_gmp"
version = "0.1.0"
description = "Integrated GMP endpoint for cross-chain message passing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "intent_gmp"

[features]
no-entrypoint = []
custom-heap = []
custom-panic = []
default = []

[dependencies]
solana-program = "2.1"
borsh = "0.10"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "2.1"
solana-sdk = "2.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
